--- a/home/index.html
+++ b/home/index.html
@@ -84,7 +84,7 @@ var pysOptions = {"staticEvents":{"facebook":{"init_event":[{"delay":0,"type":"s
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 '//www.googletagmanager.com/gtm.'+'js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-WQS6KXK');
+})(window,document,'script','dataLayer','G');
 </script>
 <!-- End Google Tag Manager -->
 <!-- End Google Tag Manager for WordPress by gtm4wp.com --><script>
